syntax = "proto3";

package listings;
option go_package = "./proto;listings";

message Place {
  string full_address = 1;
  string street = 2;
  string city = 3;
  string state = 4;
  int32 zip_code = 5;
  string neighborhood = 6;
  optional string unit = 7;
  Coordinates coordinates = 8;
}

message Coordinates {
  double lat = 1;
  double lng = 2;
}

enum STATUS {
  STATUS_UNKNOWN = 0;
  SUCCESS = 1;
  FAIL = 2;
}